Fixed spelling mistakes

--- a/src/lang/terminus.fr.po
+++ b/src/lang/terminus.fr.po
@@ -703,7 +703,7 @@ msgstr "Villageoise"
 
 msgid "people_citizen3_text"
 msgstr ""
-"La villageoise pleure et tremble incontrolablement. \n"
+"La villageoise pleure et tremble incontrôlablement. \n"
 "\"My baby,\" pleure t'elle, \n"
 "\"They kidnapped my baby! I just know that wizard had something to do with it.\""
 
@@ -777,28 +777,28 @@ msgstr ""
 "\"Ah, oui, le sort 'rm',\" le vendeur songe.\n"
 "\"Dis juste 'rm' suivi du nom de l'objet ou de la personne,\n"
 "et cela causera sa disparition… pour toujours.\n"
-"As-tu les trippes pour l'utiliser ?\""
+"As-tu les tripes pour l'utiliser ?\""
 
 msgid "item_backpack"
 msgstr "SacÀDos%s"
 
 msgid "item_backpack_text"
 msgstr ""
-"Il y a un sac à dos avec ouverture zippée super classe sur la table sans prix dessus. Sa toile est un peu éffilochée mais il semble robuste.\n"
-"Tu jetes un coup d'œil sur le vendeur mais son attention est ailleurs.\n"
-"Une incription apparaît près de la languette du sac : 'unzip'. "
+"Il y a un sac à dos avec ouverture zippée super classe sur la table sans prix dessus. Sa toile est un peu effilochée mais il semble robuste.\n"
+"Tu jettes un coup d'œil sur le vendeur mais son attention est ailleurs.\n"
+"Une inscription apparaît près de la languette du sac : 'unzip'. "
 
 msgid "item_backpack_stolen"
 msgstr ""
 "Tu viens de voler le sac à dos.\n"
-"Étant donné que tu es fauché, et que tu ne travailles pas une odieuse multinationnale,\n"
+"Étant donné que tu es fauché, et que tu ne travailles pas une odieuse multinationale,\n"
 "Richard Stallman devrait être fier de toi."
 
 msgid "item_mkdir_spell"
 msgstr "mkdir"
 
 msgid "item_mkdir_spell_text"
-msgstr "\"'mkdir' transforme les rêves en réalité. Invoque ce sort suivi du nom qui te convient crééra un nouveau chemin.\""
+msgstr "\"'mkdir' transforme les rêves en réalité. Invoque ce sort suivi du nom qui te convient créera un nouveau chemin.\""
 
 msgid "room_library"
 msgstr "Bibliothèque"
@@ -819,7 +819,7 @@ msgstr "RomanceDePoche"
 
 msgid "item_romancebook_text"
 msgstr ""
-"Tu retournes le livre de poche et l'ouvre sur un page au hazard. \n"
+"Tu retournes le livre de poche et l'ouvre sur un page au hasard. \n"
 "\"Oh, Horace!\" s'écria Antonia , sa poitrine se bondant tandis qu'Horace déchirait habilement son corset par sa souple encadrure. Horace fit un grognement animal et saisit ses doigts avec ses mains puissantes…\n"
 "— tu fermes le livre sans intérêt et tu le reposes sur l'étagère."
 
@@ -843,7 +843,7 @@ msgstr ""
 "invoque juste 'cd ~' et tu y retournera instantanément. \n"
 "Mais rappelle toi que ce sera plus compliqué de revenir.\"\n"
 "\n"
-" Plus loin, un histoire intitulée \"Solitidue\" dit qu'une magiciene avec un pull arc-en-ciel et des lunettes roses, pouvais revenir en un instant là d'où il venait, quelque soit l'endroit. Aussi, elle pouvait téléporter des objets à un endroit distant.\n"
+" Plus loin, un histoire intitulée \"Solitude\" dit qu'une magicienne avec un pull arc-en-ciel et des lunettes roses, pouvais revenir en un instant là d'où il venait, quelque soit l'endroit. Aussi, elle pouvait téléporter des objets à un endroit distant.\n"
 "La page suivante semble expliquer comment, mais elle a été déchirée."
 
 msgid "item_vimbook"
@@ -871,14 +871,14 @@ msgid "item_lever_text"
 msgstr "Un panneau derrière l'étagère semble recouvrir une source de lumière."
 
 msgid "item_lever_exec"
-msgstr "Par curiosité, tu le pousses, révelant une pièce secrète."
+msgstr "Par curiosité, tu le pousses, révélant une pièce secrète."
 
 msgid "room_backroom"
 msgstr "PièceSecrete"
 
 msgid "room_backroom_text"
 msgstr ""
-"Derrière le panneau, tu trouve une bibliothéquaire seule avec un petit elfe.\n"
+"Derrière le panneau, tu trouve une bibliothécaire seule avec un petit elfe.\n"
 "Tu espères ne pas les déranger."
 
 msgid "people_grep"
@@ -905,7 +905,7 @@ msgid "people_librarian_text"
 msgstr ""
 "\"? Oh, bonjour. Désolé pour le désordre,\n"
 " mais je suis très occupé dans mes recherches sur {{people_darkwizard_pre}} {{people_darkwizard}}.\n"
-"Peux-tu me faire une faveur ? Peurrais-tu me dire toutes les références à {{people_darkwizard}} dans le livre relatant \"{{item_historybook}}\". Mon assistant Grep peux t'aider.\" \n"
+"Peux-tu me faire une faveur ? Pourrais-tu me dire toutes les références à {{people_darkwizard}} dans le livre relatant \"{{item_historybook}}\". Mon assistant Grep peux t'aider.\" \n"
 "Grep te regarde avec un air mécontent. \"Greeepp.\"\n"
 "\"Pour chercher les occurences d'un terme dans un livre, écris simplement \"grep\" suivi du terme et de l'objet en question\n"
 ". Va trouver le livre et tape \"grep {{people_darkwizard}} {{item_historybook}}\"."
@@ -1132,7 +1132,7 @@ msgstr "Tu ne pas toucher les ronces à cause de ces maudites épines."
 msgid "item_brambles_rm"
 msgstr ""
 "Lorsque tu invoques '{{cmd.rm}}' sur le tas de ronces. Ces dernières émettent une lueur d'un bleu très profond.\n"
-"Tu insistes et les ronces disparaîssent dans un nuage de fumée."
+"Tu insistes et les ronces disparaissent dans un nuage de fumée."
 
 msgid "room_slide"
 msgstr "Toboggan"
