--- a/src/lang/terminus.fr.po
+++ b/src/lang/terminus.fr.po
@@ -997,11 +997,11 @@ msgstr ""
 "N'as-tu donc pas de valeurs ?"
 
 msgid "people_artisan"
-msgstr "Artisan"
+msgstr "Artisante"
 
 msgid "people_artisan_text"
 msgstr ""
-"L'Artisan lève ses lunettes et te regarde avec surprise.\n"
+"L'Artisante lève ses lunettes et te regarde avec surprise.\n"
 "\"Êtes-vous le nouvel assistant ? Vous êtes en retard !\" …\n"
 "\"Vous dites que vous n'êtes pas mon assistant ? \n"
 "Eh bien, cela ne signifie pas que vous ne pouvez pas vous rendre utile.\n"
@@ -1452,7 +1452,7 @@ msgstr ""
 "(gReP : Récupère des parties) \n"
 "Utilise \"{{cmd.grep}}\" pour trouver les parties d'un texte qui contiennent le mot magique.\n"
 "Il faut écrire : \n"
-"  grep MOT_MAGIQUE LÀ_OU_TU_CHERCHE "
+"  grep MOT_MAGIQUE LÀ_OÙ_TU_CHERCHES "
 
 msgid "help_grep"
 msgstr "Chercher quelque chose dans un texte."
