Fix grep password

--- a/src/lang/terminus.fr.po
+++ b/src/lang/terminus.fr.po
@@ -952,16 +952,16 @@ msgstr ""
 "Normalement, les personnes en question doivent avoir accès à la commande '{{cmd.talk}}' pour t'envoyer des messages."
 
 msgid "item_lever"
-msgstr "IntrigantPanneau"
+msgstr "IntrigantLevier"
 
 msgid "item_lever_text"
-msgstr "Un panneau derrière l'étagère semble recouvrir une source de lumière."
+msgstr "Ce levier est accolé au mur entre deux étagères."
 
 msgid "item_lever_exec"
-msgstr "Par curiosité, tu le pousses, révélant ainsi une pièce secrète."
+msgstr "Par curiosité, tu pousses le levier. S'en suit la disparation du panneau qui cachait une PièceSecrète."
 
 msgid "room_backroom"
-msgstr "PièceSecrete"
+msgstr "PièceSecrète"
 
 msgid "room_backroom_text"
 msgstr ""
@@ -974,7 +974,11 @@ msgstr "Grep"
 msgid "people_grep_text"
 msgstr ""
 "L'elfe se tourne vers toi avec un regard aigri.\n"
-"\"Greeeeeep,\" dit-il solennellement."
+"\"Greeeeeep,\" dit-il solennellement.\n"
+"\"Mes parents m'ont donner un nom stupide..."
+"Cependant, retiens-le : il te sera utile.\"\n"
+"\"Pour chercher les occurrences d'un terme dans un livre, écris simplement \"grep\" suivi du terme et de l'objet en question.\n"
+"Va trouver un livre et tape \"grep MOT LIVRE\"."
 
 msgid "people_librarian"
 msgstr "Bibliothécaire"
@@ -994,8 +998,6 @@ msgstr ""
 " mais je suis très occupé par mes recherches sur {{people_darkwizard_pre}} {{people_darkwizard}}.\n"
 "Peux-tu me faire une faveur ? Pourrais-tu me donner toutes les références à {{people_darkwizard}} dans le livre relatant \"{{item_historybook}}\". Mon assistant Grep peux t'aider.\" \n"
 "Grep te regarde avec un air mécontent. \"Greeepp.\"\n"
-"\"Pour chercher les occurrences d'un terme dans un livre, écris simplement \"grep\" suivi du terme et de l'objet en question.\n"
-" Va trouver le livre et tape \"grep {{people_darkwizard}} {{item_historybook}}\"."
 
 msgid "room_rockypath"
 msgstr "CheminEnPierres"
@@ -1258,8 +1260,8 @@ msgstr "Instructions"
 
 msgid "item_instructions_text"
 msgstr ""
-"Vous avez probablement appris à utiliser votre ami grep. Si ce n'est pas encore le cas, il serait sage que vous vous rendiez dans la bibliothèque afin d'y remédier. Parce qu'ici vous aurez besoin de l'utiliser pour parvenir à vos fins. Voici votre tâche : \n"
-"Il y de nombreux objets entreposés dans la salle PlusDeFichiersNoyau et l'un d'entre eux contient le mot de passe sudo. Ce mot de passe est très puissant : il vous permet de faire absolument tout ce que vous voulez dans l'univers. Il vous permet de lancer n'importe quel sort sur n'importe quel objet, même protégé. Vous savez que le mot de passe est caché dans une de ces fichiers .txt. Vous savez qu'il se trouve dans la ligne qui contient le mot : « password= ». Vous devriez réussir à le trouver avec l'aide de votre ami grep. Ensuite, vous devrez utiliser le sort sudo pour atteindre le Paradis. Pour cela, tapez simplement « sudo » avant la commande que vous voulez appliquer, de la façon suivante : 'sudo cp OBJET_A OBJET_B'. Il vous sera alors demandé le mot de passe sudo. Saisissez-le, et le sort à la suite de sudo sera alors appliqué. Si vous ouvrez le Certificat au Paradis avec sudo, vous découvrirez vraiment le Paradis."
+"Vous avez probablement appris à utiliser le sort grep. Si ce n'est pas encore le cas, il serait sage que vous vous rendiez dans la bibliothèque afin d'y remédier. Parce qu'ici vous aurez besoin de l'utiliser pour parvenir à vos fins. Voici votre tâche : \n"
+"Il y de nombreux objets entreposés dans la salle PlusDeFichiersNoyau et l'un d'entre eux contient le mot de passe sudo. Ce mot de passe est très puissant : il vous permet de faire absolument tout ce que vous voulez dans l'univers. Il vous permet de lancer n'importe quel sort sur n'importe quel objet, même protégé. Vous savez que le mot de passe est caché dans une de ces fichiers .txt. Vous savez qu'il se trouve dans la ligne qui contient le mot : « password= ». Vous devriez réussir à le trouver avec l'aide de grep. Ensuite, vous devrez utiliser le sort sudo pour atteindre le Paradis. Pour cela, tapez simplement « sudo » avant la commande que vous voulez appliquer. Il vous sera alors demandé le mot de passe sudo. Saisissez-le, et le sort à la suite de sudo sera alors appliqué. Lisez le Certificat avec sudo et vous ne serez pas venu jusqu'ici pour rien..."
 
 msgid "room_morekernel"
 msgstr "PlusDeFichiersNoyau"
@@ -1269,6 +1271,9 @@ msgstr "Il y a tant de fichiers dans cette salle !"
 
 msgid "item_bigfile"
 msgstr "%s.txt"
+
+msgid "grep_long"
+msgstr "Vous obtenez des centaines de lignes en réponse..."
 
 msgid "item_bigfile_text"
 msgstr ""
@@ -1296,7 +1301,8 @@ msgstr ""
 "de rester là à ne rien faire ; une ou deux fois elle avait jeté les yeux sur \n"
 "le livre que lisait sa sœur ; mais quoi ! pas d’images, pas de dialogues ! \n"
 "« La belle avance, » pensait Alice, « qu’un livre sans images, sans \n"
-"causeries ! » \n""Ce texte contient des millions de mots.\n"
+"causeries ! » \n"
+"Ce texte contient des millions de mots.\n"
 "Cela prendrait des heures de tout lire."
 
 msgid "item_bigfileS_text"
