--- a/src/lang/terminus.en.po
+++ b/src/lang/terminus.en.po
@@ -1256,7 +1256,7 @@ msgstr ""
 msgid "man_cd"
 msgstr ""
 "The old man's voice echoes in your head as if from a great distance: \n"
-"(Choose Destination) Use \\\"cd\\\" to move about the world.\n"
+"(Choose Destination) Use \"cd\" to move about the world.\n"
 "Rememberrrrrr..."
 
 msgid "man_mv"
@@ -1278,7 +1278,7 @@ msgstr ""
 " Command Input:\n"
 "ls          (for current location)\n"
 "-OR-\n"
-"ls LOCATION     (for locations you that you cannot \\\"cd\\\" into)\n"
+"ls LOCATION     (for locations you that you cannot \"cd\" into)\n"
 "Rememberrrrrr..."
 
 msgid "man_less"
