--- a/src/lang/terminus.fr.po
+++ b/src/lang/terminus.fr.po
@@ -1252,8 +1252,51 @@ msgstr "Vous avez correctement saisi le mot de passe. Vous êtes maintenant au P
 msgid "item_certificate"
 msgstr "Certificat"
 
-msgid "item_certificate_text"
+msgid "item_certificate_alert"
 msgstr "Vous devez lire le Certificat avec le mot de passe sudo."
+
+msgid "item_certificate_text"
+msgstr "Vous tenez le certificat qui se met à vibrer, briller et étrangement à refroidir, vous gelant les mains.\n"
+"Vous le lâcher et songer à boire une tisane."
+
+msgid "room_paradise"
+msgstr "Paradis"
+
+msgid "room_paradise_text"
+msgstr ""
+" En entrant vous remarquez que le mur à été gravé de long en large, probablement avec les ongles...\n"
+"On peut difficilement y lire les mots : \n"
+" \n"
+" Ca y est ! vous avez vraiment ouvert les portes du Paradis en découvrant le mot de passe sudo. \n"
+" Vous n'avez peut être pas encore assez d'expérience pour l'utiliser avec discernement, mais je suis sûre que vous apprendrez vite. \n"
+" \n"
+" Et puis, il y a toutes ces choses qui rendent l'inimaginable possible.\n"
+" Comme toute chose intéressante, cela demande du temps et de la persévérance. \n"
+" Je suis sûre que vous y arrivez sans difficulté avec l'aide des personnes bienveillantes qui peuplent déjà ce monde.\n"
+" \n"
+" Félicitations ! Merci pour votre curiosité et votre patience."
+
+msgid "room_paradise_ls"
+msgstr ""
+"Il n'y a vraiment rien d'intéressant au Paradis. \n"
+"Vous repensez à une boisson chaude ou au moins tiède \n"
+"et à ce cookie que vous pouvez maintenant manger. \n"
+"Malgré l'odeur de transpiration, l'air est respirable et vous en voulez plus. \n"
+"Vous songez à sortir, à marcher un peu puis à vous assoir confortablement. \n"
+"Inspirez, pensez au portes que vous pouvez ouvrir, et expirer. \n"
+"(GAME OVER)\n"
+
+msgid "gameover"
+msgstr "Bon maintenant, je pense que tu vas t'en aller. C'était sympa de te suivre depuis ma grotte. J'espère qu'on pourra se recroiser."
+
+msgid "gameover1"
+msgstr "Tu es encore là ? Le jeu est fini tu sais..."
+
+msgid "gameover2"
+msgstr "Ah ... d'accord..."
+
+msgid "gameover3"
+msgstr "Bon comme je t'ai déjà dis 'au revoir', je vais t'ignorer. M'en veux pas, hein."
 
 msgid "item_instructions"
 msgstr "Instructions"
@@ -1324,17 +1367,6 @@ msgstr ""
 "causeries ! » \n"
 "Ce texte contient des millions de mots.\n"
 "Cela prendrait des heures de tout lire."
-
-msgid "room_paradise"
-msgstr "Paradis"
-
-msgid "room_paradise_text"
-msgstr ""
-"Vous avez vraiment découvert le Paradis avec le mot de passe sudo. \n"
-"Félicitations !"
-
-msgid "room_paradise_ls"
-msgstr "Il n'y a vraiment rien d'intéressant au Paradis."
 
 msgid "room_trollcave"
 msgstr "CaveDesTrolls"
