--- a/src/lang/terminus.fr.po
+++ b/src/lang/terminus.fr.po
@@ -646,7 +646,7 @@ msgid "item_dead_end_text"
 msgstr "Voie sans issue"
 
 msgid "room_dank"
-msgstr "PièceHumide"
+msgstr "Cellier"
 
 msgid "room_dank_text"
 msgstr "Cette pièce est encore plus sombre."
@@ -655,15 +655,17 @@ msgid "item_boulder"
 msgstr "Rocher"
 
 msgid "item_boulder_text"
-msgstr "Tu sens un léger courant d'air passer derrière le rocher."
+msgstr "Il s'agirait plutôt d'une grande pierre roulée.\n"
+"Tu sens un léger courant d'air passé derrière ce rocher."
 
 msgid "room_small_hole"
-msgstr "PetiteCrevasse"
+msgstr "PetitRenfoncement"
 
 msgid "room_small_hole_text"
 msgstr ""
-"Il n'y a rien de très plaisant dans cette crevasse remplie de saletés.\n"
-"Cette crevasse est à peine plus volumineuse que le rocher."
+"Il n'y a rien de très plaisant ici.\n"
+"C'est étroit, on y voit rien et le sol n'est manifestement pas entretenu.\n"
+"L'espace est à peine plus volumineux que le rocher."
 
 msgid "room_small_hole_cd"
 msgstr ""
@@ -675,8 +677,8 @@ msgstr "Tunnel"
 
 msgid "room_tunnel_text"
 msgstr ""
-"Le taux d'humidité ici est très élevé.\n"
-"Tu reçois des gouttes d'eau sur la figure.\n"
+"Pendant que tu traverse le tunnel, \n"
+"tu reçois des gouttes d'eau sur la tête.\n"
 "Tu as remarqué une touffe de poil se déplaçant à ta droite.\n"
 "Au bout de tunnel, il y a une porte ouverte."
 
@@ -727,7 +729,7 @@ msgstr "PlaceDuVillage"
 msgid "room_townsquare_text"
 msgstr ""
 "Tu te trouves sur une place du village, grande et ensoleillée.\n"
-"Au centre, il y a un piédestal sur lequel ne se trouve aucune statue.\n"
+"Au centre, il y a une fontaine ornée d'un lamantin en pierre qui souffle l'eau au dessus de son visage.\n"
 "L'architecture est très jolie, mais tout le monde semble nerveux."
 
 msgid "people_citizen1"
@@ -757,8 +759,8 @@ msgid "people_citizen2_text"
 msgstr ""
 "Ce villageois lit le journal quand il remarque que tu le regardes. \n"
 "\"As-tu lu ça ?\" s'esclaffe-t-il, secouant la dernière édition du \"Dernier Mot\" devant ton visage.\n"
-"\"Ça dit que {{people_darkwizard_pre}} {{people_darkwizard}} a répandu la corruption de Oseton jusqu'au sud et Konsole est déjà atteint !\n"
-"Les temps sont dangereux.\" \n"
+"\"{{people_darkwizard}} aurait pris le contrôle de l'ouest. Balivernes !\n" 
+" …savent plus quoi inventer pour éviter les sujets qui fâchent…\" \n"
 "marmonne-t-il, secouant sa tête et retournant à sa lecture."
 
 msgid "people_citizen3"
@@ -817,7 +819,7 @@ msgid "need_money"
 msgstr "Tu n'as pas de quoi acheter ce sort."
 
 msgid "unzipped"
-msgstr "Dans %s, tu as trouvé ces choses : %s"
+msgstr "Dans le %s, tu as trouvé ces choses : %s"
 
 msgid "item_mkdir_cost"
 msgstr "5000"
@@ -897,8 +899,17 @@ msgstr "Bibliothèque"
 
 msgid "room_library_text"
 msgstr ""
-"La bibliothèque est mal éclairée et sent la moisissure. \n"
+"La bibliothèque est mal éclairée et sent la moisissure.\n"
 "Pourtant, il y fait bon et la douceur de la moquette verte te met à l'aise."
+
+msgid "item_itemspellbook"
+msgstr "ToutSurLesSorts"
+
+msgid "item_itemspellbook_text"
+msgstr ""
+"Un sort est incarné par un objet ayant des propriétés spéciales.\n"
+"Tout sort placé dans un des lieux mentionné par le PATH pourra être lancé de n'importe où.\n"
+"Pour les autres, on peut se placer devant l'objet (disons OBJ) et l'utiliser en tapant \"./OBJ\"."
 
 msgid "item_radspellbook"
 msgstr "SuperLivreDesSortilèges"
@@ -923,8 +934,8 @@ msgstr ""
 "Ce livre semble intéressant, mais il y a trop de pages et l'écriture est vraiment petite. Voici un extrait :\n"
 " \n"
 "{{people_darkwizard}} … une vielle légende parle d'un magicien qui divisera le pays…\n"
-"…seule une personne bâtisseuse de ce monde peut arrêter le virus répandu par le {{people_darkwizard}}…\n"
-"…le pouvoir du \"sudo\" pourrait être la seule faiblesse du {{people_darkwizard}}…"
+"…seule une bâtisseuse peut arrêter le mal répandu par {{people_darkwizard}}…\n"
+"…seul le pouvoir du \"sudo\" permettra de lui résister…"
 
 msgid "item_nostalgicbook"
 msgstr "NostalgieDuPays"
@@ -964,14 +975,15 @@ msgid "item_lever_text"
 msgstr "Ce levier est accolé au mur entre deux étagères."
 
 msgid "item_lever_exec"
-msgstr "Par curiosité, tu pousses le levier. S'en suit la disparation du panneau qui cachait une PièceSecrète."
+msgstr "Par curiosité, tu pousses le levier. S'en suit la disparation du panneau qui cachait une {{room_backroom}}."
 
 msgid "room_backroom"
 msgstr "PièceSecrète"
 
 msgid "room_backroom_text"
 msgstr ""
-"Derrière le panneau, tu trouves un bibliothécaire seul avec un petit elfe.\n"
+"Derrière le panneau, tu trouves un bibliothécaire de moyenne taille avec un elfe de petite taille.\n"
+"(Les elfes sont habituellement plus grands que les bibliothécaires.)\n"
 "Tu espères ne pas les déranger."
 
 msgid "people_grep"
@@ -981,26 +993,23 @@ msgid "people_grep_text"
 msgstr ""
 "L'elfe se tourne vers toi avec un regard aigri.\n"
 "\"Greeeeeep,\" dit-il solennellement.\n"
-"\"Mes parents m'ont donner un nom stupide..."
+"\"Mes parents m'ont donner un nom stupide... "
 "Cependant, retiens-le : il te sera utile.\"\n"
-"\"Pour chercher les occurrences d'un terme dans un livre, écris simplement \"grep\" suivi du terme et de l'objet en question.\n"
+"\"Pour chercher les occurrences d'un terme dans un livre, écris simplement \"{{cmd.grep}}\" suivi du terme et de l'objet en question.\n"
 "Va trouver un livre et tape \"grep MOT LIVRE\"."
 
 msgid "people_librarian"
 msgstr "Bibliothécaire"
 
 msgid "people_darkwizard"
-msgstr "Magus"
+msgstr "Mandi"
 
 msgid "people_darkwizard_pre"
 msgstr "le mage funeste"
 
-msgid "people_darkwizard_text"
-msgstr "MageFuneste"
-
 msgid "people_librarian_text"
 msgstr ""
-"\"? Oh, bonjour. Désolé pour le désordre,\n"
+"\"(silence) ? Oh, bonjour. Désolé pour le désordre,\n"
 " mais je suis très occupé par mes recherches sur {{people_darkwizard_pre}} {{people_darkwizard}}.\n"
 "Peux-tu me faire une faveur ? Pourrais-tu me donner toutes les références à {{people_darkwizard}} dans le livre relatant \"{{item_historybook}}\". Mon assistant Grep peux t'aider.\" \n"
 "Grep te regarde avec un air mécontent. \"Greeepp.\"\n"
@@ -1153,21 +1162,11 @@ msgstr "HommeEnPleurs"
 
 msgid "people_cryingman_text"
 msgstr ""
-"<voice grl>\"Vous ! Vous faites partie des mercenaires du {{people_darkwizard}} ! Je peux la sentir cette capacité étrange que vous avez.\n"
+"<voice grl>\"Vous ! Vous faites partie des mercenaires du {{people_darkwizard}} ? Je peux la sentir cette capacité étrange que vous avez.\n"
 "Vous êtes venu·e finir le travail, n'est-ce pas ?\n"
 "Allez ! Qu'est-ce que vous attendez ? Faites votre sale boulot, il ne me reste plus rien à perdre.\n"
-"\n"
-"<voice char>« Mais enfin ! Que s'est-il passé ? »\n"
-"\n"
-"<voice grl>\"Qu'est-il arrivé ? Vous OSEZ nous le demander ? — Vous savez parfaitement ce qui est arrivé. \n"
-"Vos copains, ils sont venus, il y a deux jours. Ils ont détruit ma maison et enlevé mon pauvre enfant.\n"
-"Ma femme est partie en ville pour trouver de l'aide, mais depuis, elle a disparu.\n"
-"\n"
-"<voice char>« C'est affreux. Que puis-je faire pour vous venir en aide ? »\n"
-"\n"
-"<voice grl>\"Comment ? D'accord, j'imagine que vous n'avez rien à voir avec ceci. Vous ne ressemblez pas aux soldats du {{people_darkwizard}}.\n"
-"Ceci dit, je n'ai pas confiance en vous.\n"
-"Si vous êtes vraiment bien intentionné, alors prouvez-le en me construisant une nouvelle {{room_house}} !"
+"Ils ont détruit ma {{room_house}} et enlevé mon pauvre enfant.\n"
+"Ma femme est partie en ville pour trouver de l'aide, mais depuis, elle a disparu."
 
 msgid "room_house"
 msgstr "Maison"
@@ -1185,7 +1184,8 @@ msgid "room_clearing_less2"
 msgstr ""
 "Merci du fond du cœur pour m'avoir construit cette {{room_house}} ! J'en pleure de joie.\n"
 "Y a t'il beaucoup d'autres personnes comme toi ?\n"
-"Es-tu capable de libérer mon enfant ?\n"
+"Peux tu libérer mon enfant ?\n"
+"Je les ai vu partir par ce {{room_ominouspath}}.\n"
 "Désolé, je t'en demande beaucoup trop, mais tu es mon seul espoir pour retrouver ma famille."
 
 msgid "room_brokenbridge"
@@ -1193,11 +1193,11 @@ msgstr "PontCassé"
 
 msgid "room_brokenbridge_text"
 msgstr ""
-"Un pont de bois grinçant s'étend au dessus d'un abîme.\n"
+"Un pont de bois grinçant permet de passer au dessus d'un gouffre.\n"
 "Mais une {{item_plank}} manque, et le trou est trop grand pour être enjambé."
 
 msgid "room_brokenbridge_text2"
-msgstr "Devant toi, un pont tenu par des cordes s'étend vers l'abîme."
+msgstr "Le pont de bois grince toujours, mais tu peux maintenant passer de l'autre côté en plaçant la {{item_plank}} sur la partie abimée."
 
 msgid "item_plank"
 msgstr "Planche"
@@ -1218,9 +1218,9 @@ msgstr "RoncesTordues"
 
 msgid "item_brambles_text"
 msgstr ""
-"Ce tas de ronces est couvert d'épines qui ne t'inspirent vraiment pas confiance.\n"
-"Tu ne peux pas le contourner et tu n'essaieras sûrement pas de le traverser.\n"
-"Pourtant, quelque chose te dit que derrière ce tas de ronces se trouve quelque chose d'important."
+"Ce tas de ronces est couvert d'épines ne t'inspirent vraiment pas confiance.\n"
+"Après inspection détaillé, il s'agit en fait de fil barbelé astucieusement camouflé.\n"
+"Ça cache quelque chose."
 
 msgid "item_brambles_mv"
 msgstr "Tu ne peux pas toucher les ronces à cause de ces maudites épines."
@@ -1229,7 +1229,8 @@ msgid "item_brambles_rm"
 msgstr ""
 "Lorsque tu invoques '{{cmd.rm}}' sur le tas de ronces,\n"
 "ces dernières émettent une lueur d'un bleu très profond.\n"
-"Au bout d'un moment, les ronces disparaissent dans un nuage de fumée."
+"Ensuite, ce sont des fumées toxiques s'échappent du tas de ronces.\n"
+"Au bout d'un moment, les ronces disparaissent avec le nuage de fumée."
 
 msgid "room_slide"
 msgstr "Toboggan"
@@ -1247,19 +1248,16 @@ msgid "room_kernel"
 msgstr "FichiersNoyau"
 
 msgid "room_kernel_text"
-msgstr "Les FichiersNoyau détiennent le sudo secret (non, ce n'est pas un pseudo). Vous avez intérêt à lire le fichier d'instructions."
+msgstr "Les FichiersNoyau contiennent les secrets concernant le cœur du système."
 
 msgid "ask_password"
 msgstr "Mot de passe :"
-
-msgid "room_kernel_IHTFP"
-msgstr "Vous avez correctement saisi le mot de passe. Vous êtes maintenant au Paradis. Regardez autour de vous, Félicitations !"
 
 msgid "item_certificate"
 msgstr "Certificat"
 
 msgid "item_certificate_alert"
-msgstr "Vous devez lire le Certificat avec le mot de passe sudo."
+msgstr "Vous n'avez pas le droit de lire le Certificat."
 
 msgid "item_certificate_text"
 msgstr "Vous tenez le certificat qui se met à vibrer, briller et étrangement à refroidir, vous gelant les mains.\n"
@@ -1304,13 +1302,24 @@ msgstr "Ah ... d'accord..."
 msgid "gameover3"
 msgstr "Bon comme je t'ai déjà dis 'au revoir', je vais t'ignorer. M'en veux pas, hein."
 
+msgid "item_sudo_teaser"
+msgstr "Prospectus"
+
+msgid "item_sudo_teaser_text"
+msgstr ""
+"Avez vous déjà entendu parler de {{cmd.sudo}} ?\n"
+"{{cmd.sudo}} permet de lancer un sort sur n'importe quel objet, même protégé.\n"
+"Pour cela, tapez votre sort précédé de « sudo ». \n"
+"Grâce à {{cmd.sudo}}, vous pourrez faire valoir votre certificat."
+
 msgid "item_instructions"
 msgstr "Instructions"
 
 msgid "item_instructions_text"
 msgstr ""
-"Vous avez probablement appris à utiliser le sort grep. Si ce n'est pas encore le cas, il serait sage que vous vous rendiez dans la bibliothèque afin d'y remédier. Parce qu'ici vous aurez besoin de l'utiliser pour parvenir à vos fins. Voici votre tâche : \n"
-"Il y de nombreux objets entreposés dans la salle PlusDeFichiersNoyau et l'un d'entre eux contient le mot de passe sudo. Ce mot de passe est très puissant : il vous permet de faire absolument tout ce que vous voulez dans l'univers. Il vous permet de lancer n'importe quel sort sur n'importe quel objet, même protégé. Vous savez que le mot de passe est caché dans une de ces fichiers .txt. Vous savez qu'il se trouve dans la ligne qui contient le mot : « password= ». Vous devriez réussir à le trouver avec l'aide de grep. Ensuite, vous devrez utiliser le sort sudo pour atteindre le Paradis. Pour cela, tapez simplement « sudo » avant la commande que vous voulez appliquer. Il vous sera alors demandé le mot de passe sudo. Saisissez-le, et le sort à la suite de sudo sera alors appliqué. Lisez le Certificat avec sudo et vous ne serez pas venu jusqu'ici pour rien..."
+"Il y a de nombreux objets entreposés dans la salle PlusDeFichiersNoyau.\n"
+"Dans l'un d'eux, j'ai caché le mot de passe pour utiliser {{cmd.sudo}} précédé de « password= ».\n"
+"Vous avez probablement appris à utiliser le sort {{cmd.grep}}. Si ce n'est pas encore le cas, rendez vous à la bibliothèque.\n"
 
 msgid "room_morekernel"
 msgstr "PlusDeFichiersNoyau"
@@ -1379,8 +1388,8 @@ msgstr "CaveDesTrolls"
 
 msgid "room_trollcave_text"
 msgstr ""
-"TLa vace est sombre et elle sent… les pieds ?! Ah, d'accord, ce sont probablement les trolls. \n"
-"Sur la mur du fond, il y a un enfant enfermé dans une cage qui à l'air effrayé."
+"La cave est sombre et elle sent… les pieds ?! Ah, d'accord, ce sont probablement les trolls. \n"
+"Contre le mur du fond, il y a une cage avec un enfant enfermé dedans."
 
 msgid "people_troll1"
 msgstr "TrollMoche"
@@ -1391,12 +1400,12 @@ msgstr "Il a l'air fou, et vraiment très moche."
 msgid "people_troll1_mv"
 msgstr ""
 "Le troll semble avoir été surpris, puis il s'en va.\n"
-"De toutes façons, il est inofffensif."
+"L'espace d'une demi seconde tu as cru voir un beau jeune homme à la place du troll."
 
 msgid "people_troll1_rm"
 msgstr ""
-"Le troll semble avoir été surpris, puis il disparaît \n"
-"dans un bruit désagrable de pataugeage."
+"Le troll semble avoir été surpris, puis disparaît.\n"
+"Tu ignore ce qu'il était et tu n'as déjà comme souvenir de lui qu'un bruit désagréable signifiant le moment ou tu l'as fait disparaître."
 
 msgid "people_troll1_cp"
 msgstr "Ils se multiplient !"
@@ -1407,12 +1416,7 @@ msgstr "TrollPlusMoche"
 msgid "people_troll2_text"
 msgstr ""
 "Il a l'air fou et vraiment vraiment moche. \n"
-"Mais il veut te dire quelque chose. Entre deux \n"
-"grognements incompréhensibles, tu parviens à discerner les mots suivants : \n"
-"Tu peux jeter des sorts sur les objets que tu ne vois actuellement. Par exemple, si tu veux \n"
-"dupliquer un objet de cette salle vers le CheminInquiétant d'où tu es venu, tu faire \n"
-"cp [OBJET_À_COPIER] ../[NOUVEAU_NOM_OBJET]. Tu peux faire cela pour la plupart des sorts et la plupart des salles. \n"
-"Utilise cette connaissance avec prudence. Souviens-toi… tu ne peux pas annuler un sort « rm »."
+"Mais il veut te dire quelque chose. Mais ces grognements sont incompréhensibles."
 
 msgid "people_supertroll"
 msgstr "TrollAbsolumentHideux"
@@ -1421,12 +1425,12 @@ msgid "people_supertroll_text"
 msgstr "Tu ne veux sûrement pas regarder cet individu. Oups, trop tard."
 
 msgid "people_supertroll_rm"
-msgstr "Le troll émet un rot spectaculaire, puis un sourire narquois. Tu ne pourras pas te débarrasser de lui facilement, pas sans le « mot de passe sudo ». Ce n'est pas « pseudo », c'est « sudo » ! Tu peux le trouver dans les FichiersNoyau. Mais d'abord tu dois te débarrasser du TrollMoche."
+msgstr "Le troll émet un rot spectaculaire. Il semble que ça n'ait eu aucun effet."
 
 msgid "people_supertroll_mv"
 msgstr ""
 "Si tu le fais sortir de la grotte, il ira semer la terreur dans le pays.\n"
-"Il voudra aussi probablement te manger."
+"Il voudra aussi probablement te manger, lorsque tu lui tournera le dos."
 
 msgid "room_cage"
 msgstr "Cage"
@@ -1437,7 +1441,7 @@ msgstr "Il y a un enfant terrifié dans cette cage."
 msgid "room_cage_cd"
 msgstr ""
 "Tu ne peux pas te faufiler entre les barreaux de la cage. Et puis, ça va pas la tête ?\n"
-"Pourquoi voudrais-tu aller dans cette cage ? Tu envies le sort des animaux à fourrure ?\n"
+"Pourquoi voudrais tu aller dans cette cage ?\n"
 "Ce {{people_supertroll}} pourrait te dépecer comme une clémentine."
 
 msgid "people_kidnapped"
@@ -1453,9 +1457,7 @@ msgstr ""
 "L'enfant regarde autour de lui, confus, surpris de se trouver hors de la cage.\n"
 "Tu lui souris et lui dis avec une voix douce : \n"
 "<voice char> « Tu devrais rentrer chez toi p'tit gars. » \n"
-"<voice girl>\"Je suis une fille avec des cheveux courts. Pas un garçon manqué. Une fille ! Pourquoi il faut toujours être un garçon par défaut ? \", <voice char> dit la petite fille.\n"
-"Avant de se précipiter vers la sortie, elle en profite pour donner un coup de pied dans le genou du {{people_supertroll}}.<voice girl>\"Je t'avais dit de me lâcher !\"\n"
-"<voice char>Le {{people_supertroll}} se met alors à pleurer tandis que la petite s'échappe."
+"<voice girl>\"Quoi ? Pourquoi il faut toujours être un garçon par défaut ? Je suis une fille avec des cheveux courts. En plus, t'as l'air d'une crapule toi.\", <voice char> dit la petite fille juste avant de s'échapper."
 
 msgid "man_cd"
 msgstr ""
@@ -1480,9 +1482,9 @@ msgstr ""
 "Utilise \"ls\" pour voir ce qui se trouve dans un chemin donné. \n"
 "Soit tu observes là où tu es, soit tu observes un autre chemin.\n"
 "Il faut écrire : \n"
-"  ls              (pour voir autour de toi) \n"
+"  ls             (pour voir autour de toi) \n"
 "-OU- \n"
-"  ls CHEMIN     (pour voir là où tu ne peux pas choisir ta destination \"cd\" )"
+"  ls CHEMIN      (pour voir là où tu ne peux pas choisir ta destination \"cd\" )"
 
 msgid "help_ls"
 msgstr "Décrire un chemin."
